<resources>
    <string name="app_name">Tuling</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="null_str"></string>

    <string name="action_exit">Exit Program</string>
    <string name="start_bluetooth">Bluetooth</string>
    <string name="ble_ptt">BLE PTT</string>
    <string name="change_passwd">Change Pass</string>
    <string name="change_nick">Change alias</string>
    <string name="set_ptt_type">PTT trigger</string>
    <string name="set_ble_ptt">BLE PTT</string>
    <string name="set_audio">Audio attributes</string>
    <string name="show_version">APP infomation</string>
    <string name="bind_phone">bind PhoneNo</string>

    <string name="show_speaker_level">Speaker Volume</string>
    <string name="notify_sound_select">notify sound type:&#160;</string>
    <string name="normal_notify">Normal</string>
    <string name="simple_notify">Simple</string>
    <string name="none_notify">Mute</string>

    <string name="register">NEW</string>
    <string name="login">GO</string>
    <string name="confirm">OK</string>
    <string name="init_channel">Initializing Channels</string>
    <string name="init_channel_end">Get total:&#160;</string>
    <string name="begin_dialogsession">To these:&#160;</string>
    <string name="end_smssession">issue short message</string>
    <string name="end_dialogsession">issue one-way talking.</string>
    <string name="user_nick">ALIAS:&#160;</string>
    <string name="account">Tourlink NO:&#160;</string>
    <string name="invite">code:&#160;</string>
    <string name="password">PASSWORD:&#160;</string>
    <string name="password_new">New Pass:&#160;</string>
    <string name="pass_confirm">Confirm:&#160;</string>
    <string name="nick_now">old alias:&#160;</string>
    <string name="nick_new">new alias:&#160;</string>
    <string name="phone_no">PhoneNo:&#160;</string>
    <string name="auth_code">Auth-Code:&#160;</string>


    <string name="channel_name_fragment">Channel Name:&#160;</string>
    <string name="new_channel_name">New Channel Name:&#160;</string>
    <string name="entry_code_yes">[use pass]</string>
    <string name="entry_code_no">[no pass]</string>
    <string name="focus_ec_hint">PASSWD</string>
    <string name="modi_channel_name">Change Channel Name:</string>

    <string name="tourling">TourLink</string>
    <string name="jzone">JZone Tech WuXi</string>
    <string name="ok">OK</string>
    <string name="visitor_intro">You are TourLink Guest</string>
    <string name="visitor_nick">Use alias:&#160;</string>
    <string name="user_entry">USER</string>
    <string name="reset_pw">FORGET-PASS</string>

    <string name="entry_channel">ENTER</string>
    <string name="sending_sms">Issue SMS</string>
    <string name="dialog">one-way talk</string>
    <string name="dengdeng">&#160;... &#160;</string>
    <string name="ren">&#160;man</string>
    <string name="gong">&#160;total&#160;</string>
    <string name="select_bluetooth">select bluetooth</string>
    <string name="pair_hint">turn on and pair bluetooth</string>
    <string name="connect_bluetooth_failed1">link to&#160;</string>
    <string name="connect_bluetooth_failed2">&#160;failed</string>
    <string name="update_hint">There is a new version for download</string>

    <string name="spk_volume_hint">Speaker Volume</string>
    <string name="as_system_vol">System</string>
    <string name="that_is">&#160;:&#160;</string>

    <string name="tl_sms_hint">Tourlink Summon</string>
    <string name="tl_sms_hint1">There are&#160;</string>
    <string name="tl_sms_hint2">&#160;Summon</string>
    <string name="comes_from">From&#160;</string>
    <string name="tl_new_sms">New TL-Summon</string>

    <string name="channel_create">New Channel</string>
    <string name="channel_search">Search/select</string>
    <string name="channel_delete">Un-select Channel</string>
    <string name="channel_modify">Channel Name</string>
    <string name="channel_default">Default Channel</string>

    <string name="binderr_auth_code">Error Auth-code</string>
    <string name="binderr_bound_exist">Error Bound existed</string>
    <string name="binderr_inner">Error sever inner err</string>
    <string name="binderr_no_phone">Error no phoneNo</string>
    <string name="binderr_no_account">Error Account</string>
    <string name="binderr_phoneNo">Error PhoneNo</string>
    <string name="binderr_phone_used">Error PhoneNo used</string>
    <string name="binderr_sms_server">Error sms server</string>
    <string name="binderr_phone_unava">Error invaid phone</string>
    <string name="binderr_network">Error Network</string>
    <string name="binderr_unknown">Error ----</string>

    <string name="binding_phone">Phone NO:&#160;</string>
    <string name="input_auth_code">Auth Code:&#160;</string>
    <string name="input_format_error">Error Format.</string>
    <string name="member_select_hint">Select limited</string>
    <string name="member_sms">Add Summon</string>
    <string name="member_dialog">Add Call</string>
    <string name="offline_hint">OFFLINE</string>
    <string name="exit_ui_hint">exit UI, try again</string>
    <string name="ch_create_seg">Create</string>
    <string name="de_channel_seg">channel</string>
    <string name="no_channel_hint">Not found</string>
    <string name="success_hint">Success</string>
    <string name="fail_hint">Failed</string>
    <string name="sms_seg">summon&#160;</string>
    <string name="deliver_seg">&#160;deliverd</string>
    <string name="change_pass_success">password changed.</string>
    <string name="operate_failed">OP failed.</string>
    <string name="rename_success">changed.</string>
    <string name="rename_failed">not changed:&#160;</string>
    <string name="create_success">created.</string>
    <string name="create_failed">not created:&#160;</string>
    <string name="delete_success">deleted.</string>
    <string name="delete_failed">not deleted::&#160;</string>
    <string name="focuse_success">added.</string>
    <string name="focuse_failed">not added::&#160;</string>
    <string name="unfocuse_success">removed.</string>
    <string name="unfocuse_failed">not removed:&#160;</string>
    <string name="default_ch_set">default channel is:&#160;</string>
    <string name="no_entry_channel">No Entry</string>
    <string name="getting_pub_channel">Get Public Ch.</string>
    <string name="getting_channels">Get channel list</string>
    <string name="tourling_ch_hint">TOURLINK CH</string>
    <string name="tourling_ch_seg">TOURLINK&#160;</string>
    <string name="ch_hint_seg">&#160;CH</string>
    <string name="cherr_toomuch">Number Limited</string>
    <string name="change_nick_succ">New alias is:&#160;</string>
    <string name="change_nick_fail">set alias failed.</string>
    <string name="bind_phone_failed">Error binding, reason:&#160;</string>
    <string name="bind_phone_hint1">Bind NO:&#160;</string>
    <string name="bind_phone_hint2">&#160;Success.</string>
    <string name="failed_reason">ERROR.reason:&#160;</string>
    <string name="reset_pass_success">pass reseted.</string>
    <string name="sending_auth_hint1">Auth code send to&#160;</string>
    <string name="sending_auth_hint2">&#160;phone.</string>

    <string name="cherr_psss">Err pass</string>
    <string name="cherr_unknown">Unknown</string>
    <string name="need_account">need account</string>
    <string name="error_phoneno">Err phoneNo</string>
    <string name="need_passwd">need pass</string>
    <string name="input_phoneno">need phoneNo</string>
    <string name="phoneno_hint">PhoneNo:&#160;</string>
    <string name="user_hint">Account</string>
    <string name="auth_code_error">Err auth-code</string>
    <string name="unidentiry_pass">Err input</string>
    <string name="no_session">Err session</string>
    <string name="no_history">No history records</string>
    <string name="today">Today&#160;</string>
    <string name="back_exit_ui_hint">twice to exit UI</string>
    <string name="sms_check">send sms</string>

    <string name="err_timeout">Err timeout</string>
    <string name="err_account">Err account</string>
    <string name="err_userpass">Err password</string>
    <string name="err_serverunava">Err service</string>
    <string name="err_network">Err network</string>
    <string name="err_nouser">Err account</string>
    <string name="register_failed">Register failed</string>
    <string name="callmeeting_head">CallMeeting by&#160;</string>

    <string name="visitor_welcome">You are tourlink guest</string>
    <string name="visitor_nick_err">,&#160;too short&#160;</string>
    <string name="luren">GUEST</string>
    <string name="tg1">-A</string>
    <string name="tg2">-C</string>
    <string name="tg3">-E</string>
    <string name="tg4">-F</string>
    <string name="tg5">-H</string>
    <string name="tg6">-K</string>
    <string name="tg7">-P</string>
    <string name="tg8">-Q</string>
    <string name="tg9">-R</string>
    <string name="tg0">-T</string>

    <string name="text_shift_hint"> &lt;&#160;&lt;&#160;&lt;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&gt;&#160;&gt;&#160;&gt;&#160;</string>
    <string name="guanwang">www.tourling.cn</string>

    <!-- 话题 -->
    <string name="topic_job">
        1. 你喜欢什么样的工作环境？\n2. 工作上有什么新鲜事情？\n3. 老板人怎么样？\n4. 是否对自己的工作满意？\n5. 压力大不大？\n6. 下班之后一般喜欢吃什么？\n7. 自己做饭？\n8. 平常去哪儿玩？\n9. 电影，电视\n10. 去哪儿玩耍\n
    </string>
    <string name="topic_wish">
        1. 未来想成为什么？这个有点远啦\n2. 你的梦想是什么？\n3. 你小时候的愿望是什么？\n4. 小学的愿望是什么？\n5. 初中的愿望是什么？\n6. 高中的愿望是什么？\n7. 大学的愿望是什么？\n8. 毕业之后的愿望是什么？\n9. 现在的愿望是什么？\n10. 为什么不一样？\n
    </string>
    <string name="topic_marriage">
        1. 你心中完美的婚礼是什么样子的？\n2. 你认为一夫一妻制很重要吗？\n3. 婚后会要孩子吗？\n4. 你对堕胎的看法是？\n5. 宗教信仰对婚姻影响很大吗？\n6. 离婚对于夫妇双方有何影响？\n7. 什么因素会让你决定要一个孩子？\n8. 婚姻对你来说最重要的是什么？\n9. 什么因素会让你决定结婚？你又是如何确定人选和时机的？\n10. 婚后谁来管孩子？\n11. 你认为夫妻双方应该财政独立吗？或者谁来掌握经济大权？\n12. 离婚后，你认为父母该做些什么去让孩子适应？\n13. 你认为孩子是离婚的受害者吗？\n14. 婚姻中个人该有多少独处的时间？\n15. 你认为婚姻咨询服务有效吗？为什么？\n16. 你会如何培养孩子的道德价值观？\n17. 谁该对孩子进行性启蒙？当孩子多大时呢？\n18. 你认为自身该在孩子的教育中扮演怎样的角色？\n19. 你对用在孩子身上的开销有何看法？\n
    </string>
    <string name="topic_interest">
        1. 喜欢什么运动\n2. 喜欢什么花\n3. 喜欢什么食物\n4. 喜欢什么服饰\n5. 喜欢什么化妆品\n6. 喜欢什么电影/音乐  \n7. 喜欢什么明星\n8. 一般有什么心事   \n9. 星座话题\n10. 喜欢什么游戏\n
    </string>
    <string name="topic_something">
        1. 你认为钱最重要的功能是？\n2. 你是如何学到作为男性（女性）所应具备的品质的？\n3. 你相信神吗？\n4. 如果金钱不再是目标，你最大的追求会是什么？\n5. 如果你中了彩票，会去做什么呢？\n6. 如果你打算为慈善事业捐款，你会捐给哪一协会（工程）？\n7. 是否虐待过动物？\n8. 你曾被性虐待（心理虐待、辱骂）过吗？\n9. 可以告诉我支持你的信念的是什么吗？\n10. 你最欣赏谁？为什么？\n11. 谈谈你在个人债务方面的行为准则。\n12. 当你陷入困境时会向谁请教？\n13. 你认为谁在为你生活负责？\n14. 你是如何压住怒火的？它造成过麻烦吗？\n15. 如果你打算写本书，你会写些什么呢？\n16. 如果可能，你最想住在哪儿？为什么？\n17. 如果你中了彩票，还会继续上班吗？\n18. 当你对某人有偏见时，你是怎么想的？\n19. 你最好的朋友是谁？为什么？\n20. 你是如何选择现在这项事业的？\n21. 现实一点的说，什么事情会让你快乐一整天？\n22. 你做过的最无私的是哪件事？\n23. 你相信世上有鬼吗？\n24. 你今后12个月中的目标是什么？打算如何实现？\n25. 你对自己的受教育程度满意吗？\n26. 你曾犯下的最大的错误是什么？它是如何改变你人生的？\n27. 如果你捡到一个钱包，你会怎么做？\n28. 最近读了哪本书？阅读它主要的原因是什么？\n29. 你认为把办公室的笔或便笺本带回家算偷窃吗？\n30. 当你感到沮丧时，你会做些什么，行为会因此有何不同？你又是如何克服沮丧的呢？\n31. 是否实现过年初制定的目标？\n32. 希望改变自己的什么？\n33. 你家最大的“公开的秘密”是？\n34. 你认为动物有灵魂吗？\n35. 不涉及职业和婚姻的状况，描述一下你自己。\n36. 你人生中最重要的事是？\n37. 最让你感到羞耻的事是什么？为什么？\n38. 简述一下你自己的道德价值观。\n39. 促使成功人士成功的因素有哪些？谈谈自己的见解。\n40. 你生命中最早的记忆是什么？\n41. 你养大过宠物吗？最爱哪一只？\n42. 你最害怕什么？\n43. 如果你得独自为自己的生活负责，不能指望任何人，你的生活会发生哪些变化？\n44. 你最希望我向你坦白什么？\n45. 你认为何时该保守秘密？为什么？\n46. 你认为谎言有度吗？\n
    </string>
</resources>
