<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button
        style="@style/menuDialogText" 
        android:id="@+id/create_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel_create" />

    <Button 
        style="@style/menuDialogText"
        android:id="@+id/search_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel_search" />

    <Button 
        style="@style/menuDialogText"
        android:id="@+id/modify_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel_modify" />
    
    <Button 
        style="@style/menuDialogText"
        android:id="@+id/delete_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel_delete" />

    <Button 
        style="@style/menuDialogText"
        android:id="@+id/default_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel_default" />
</LinearLayout>
